--- a/src/Main/InvManSys.fxml
+++ b/src/Main/InvManSys.fxml
@@ -1,4 +1,122 @@
-<?import javafx.scene.layout.GridPane?>
-<GridPane fx:controller="Main.InvManSysController" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?xml version="1.0" encoding="UTF-8"?>
 
-</GridPane>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="800.0" style="-fx-background-color: #EEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1">
+    <Label layoutX="33.0" layoutY="23.0" text="Inventory Management System">
+        <font>
+          <Font size="24.0"/>
+        </font>
+    </Label>
+    <GridPane layoutX="13.0" layoutY="71.0" prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: E0E0E0;">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="0.0" prefWidth="103.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="79.0" minHeight="0.0" prefHeight="31.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="219.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label text="Parts">
+            <font>
+                <Font size="18.0"/>
+            </font>
+            <GridPane.margin>
+                <Insets left="10.0"/>
+            </GridPane.margin>
+        </Label>
+        <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+            <GridPane.margin>
+                <Insets/>
+            </GridPane.margin>
+        </Button>
+        <TextField promptText="Part name" GridPane.columnIndex="2">
+            <GridPane.margin>
+                <Insets left="5.0" right="10.0"/>
+            </GridPane.margin>
+        </TextField>
+        <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" text="Add" textAlignment="CENTER">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Modify" textAlignment="CENTER">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Delete" textAlignment="CENTER">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+        </HBox>
+        <TableView prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <columns>
+                <TableColumn prefWidth="50.0" text="ID"/>
+                <TableColumn prefWidth="150.0" text="Name"/>
+                <TableColumn prefWidth="50.0" text="Level"/>
+                <TableColumn prefWidth="119.0" text="Cost Per Piece"/>
+            </columns>
+        </TableView>
+    </GridPane>
+    <GridPane layoutX="408.0" layoutY="71.0" prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: E0E0E0;">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="103.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0"/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="89.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="222.0" minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        </rowConstraints>
+        <Label text="Products">
+            <font>
+                <Font size="18.0"/>
+            </font>
+            <GridPane.margin>
+                <Insets left="10.0"/>
+            </GridPane.margin>
+        </Label>
+        <Button mnemonicParsing="false" text="Button" GridPane.columnIndex="1" GridPane.halignment="RIGHT"/>
+        <TextField promptText="Product name" GridPane.columnIndex="2">
+            <GridPane.margin>
+                <Insets left="5.0" right="10.0"/>
+            </GridPane.margin>
+        </TextField>
+        <TableView prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+            <columns>
+                <TableColumn prefWidth="50.0" text="ID"/>
+                <TableColumn prefWidth="150.0" text="Name"/>
+                <TableColumn prefWidth="50.0" text="Level"/>
+                <TableColumn prefWidth="119.0" text="Cost Per Piece"/>
+            </columns>
+        </TableView>
+        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2"
+              GridPane.rowIndex="2">
+            <Button mnemonicParsing="false" text="Add">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Modify">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" text="Delete">
+                <HBox.margin>
+                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0"/>
+                </HBox.margin>
+            </Button>
+        </HBox>
+    </GridPane>
+</AnchorPane>
