Minor refactor of Add Part and Add Product Controller names.

--- a/src/Main/AddProductUI.fxml
+++ b/src/Main/AddProductUI.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.AddProductInterfaceController">
+<AnchorPane prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.AddProductUIController">
     <Label layoutX="14.0" layoutY="14.0" text="Add Product">
         <font>
           <Font name="System Bold" size="18.0" />
