--- a/src/View_Controller/MainScreen.fxml
+++ b/src/View_Controller/MainScreen.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.MainScreenController">
+<AnchorPane fx:id="MainScene" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.MainScreenController">
     <Label layoutX="14.0" layoutY="24.0" text="Inventory Management System">
         <font>
           <Font name="System Bold" size="24.0" />
@@ -29,7 +29,7 @@
                 <Insets left="10.0" />
             </GridPane.margin>
         </Label>
-        <Button fx:id="searchPartBtn" mnemonicParsing="false" onMouseClicked="#searchPartBtnEvent" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+        <Button fx:id="searchPartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
             <GridPane.margin>
                 <Insets />
             </GridPane.margin>
@@ -43,17 +43,17 @@
          </font>
         </TextField>
         <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-            <Button fx:id="addPartBtn" mnemonicParsing="false" onMouseClicked="#addPartBtnEvent" text="Add" textAlignment="CENTER">
+            <Button fx:id="addPartBtn" mnemonicParsing="false" onAction="#addPartBtnAction" text="Add" textAlignment="CENTER">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
             </Button>
-            <Button fx:id="updatePartBtn" mnemonicParsing="false" onMouseClicked="#updatePartBtnEvent" text="Modify" textAlignment="CENTER">
+            <Button fx:id="updatePartBtn" mnemonicParsing="false" onAction="#updatePartBtnAction" text="Update" textAlignment="CENTER">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
             </Button>
-            <Button fx:id="deletePartBtn" mnemonicParsing="false" onMouseClicked="#deletePartBtnEvent" text="Delete" textAlignment="CENTER">
+            <Button fx:id="deletePartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Delete" textAlignment="CENTER">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
@@ -87,7 +87,7 @@
                 <Insets left="10.0" />
             </GridPane.margin>
         </Label>
-        <Button fx:id="searchProductBtn" mnemonicParsing="false" onMouseClicked="#searchProductBtnEvent" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+        <Button fx:id="searchProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
         <TextField fx:id="productSearchBox" promptText="Product Name" GridPane.columnIndex="2">
             <GridPane.margin>
                 <Insets left="5.0" right="10.0" />
@@ -105,22 +105,22 @@
             </columns>
         </TableView>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-            <Button fx:id="addProductBtn" mnemonicParsing="false" onMouseClicked="#addProductBtnEvent" text="Add">
+            <Button fx:id="addProductBtn" mnemonicParsing="false" onAction="#addProductBtnAction" text="Add">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
             </Button>
-            <Button fx:id="updateProductBtn" mnemonicParsing="false" onMouseClicked="#updateProductBtnEvent" text="Modify">
+            <Button fx:id="updateProductBtn" mnemonicParsing="false" onAction="#updateProductBtnAction" text="Update">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
             </Button>
-            <Button fx:id="deleteProductBtn" mnemonicParsing="false" onMouseClicked="#deleteProductBtnEvent" text="Delete">
+            <Button fx:id="deleteProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Delete">
                 <HBox.margin>
                     <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                 </HBox.margin>
             </Button>
         </HBox>
     </GridPane>
-   <Button alignment="CENTER" layoutX="700.0" layoutY="385.0" mnemonicParsing="false" prefWidth="80.0" text="Exit" />
+   <Button alignment="CENTER" layoutX="700.0" layoutY="385.0" mnemonicParsing="false" onAction="#exitBtnAction" prefWidth="80.0" text="Exit" />
 </AnchorPane>
