--- a/src/View_Controller/UpdateProduct.fxml
+++ b/src/View_Controller/UpdateProduct.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.ModifyProductController">
-    <Label layoutX="14.0" layoutY="14.0" text="Modify Product">
+<AnchorPane fx:id="UpdateProductScene" prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.UpdateProductController">
+    <Label layoutX="14.0" layoutY="14.0" text="Update Product">
         <font>
             <Font name="System Bold" size="18.0" />
         </font>
     </Label>
-    <Button layoutX="375.0" layoutY="14.0" mnemonicParsing="false" prefWidth="60.0" text="Search" />
-    <TextField layoutX="437.0" layoutY="14.0" promptText="Search Product">
+    <Button fx:id="productSearchButton" layoutX="375.0" layoutY="14.0" mnemonicParsing="false" onAction="#productSearchBtnAction" prefWidth="60.0" text="Search" />
+    <TextField fx:id="productSearchBox" layoutX="437.0" layoutY="14.0" promptText="Search Product">
         <font>
             <Font name="System Italic" size="12.0" />
         </font></TextField>
@@ -23,7 +23,7 @@
             <TableColumn prefWidth="75.0" text="Price/Unit" />
         </columns>
     </TableView>
-    <Button layoutX="525.0" layoutY="155.0" mnemonicParsing="false" prefWidth="60.0" text="Add" />
+    <Button fx:id="addProductBtn" layoutX="525.0" layoutY="155.0" mnemonicParsing="false" onAction="#addProductBtnAction" prefWidth="60.0" text="Add" />
     <TableView layoutX="287.0" layoutY="190.0" prefHeight="100.0" prefWidth="300.0">
         <columns>
             <TableColumn prefWidth="75.0" text="ID" />
@@ -32,9 +32,9 @@
             <TableColumn prefWidth="75.0" text="Price/Unit" />
         </columns>
     </TableView>
-    <Button layoutX="525.0" layoutY="297.0" mnemonicParsing="false" prefWidth="60.0" text="Delete" />
-    <Button layoutX="459.0" layoutY="338.0" mnemonicParsing="false" prefWidth="60.0" text="Save" />
-    <Button layoutX="525.0" layoutY="338.0" mnemonicParsing="false" prefWidth="60.0" text="Cancel" />
+    <Button fx:id="deleteProductBtn" layoutX="525.0" layoutY="297.0" mnemonicParsing="false" onAction="#deleteProductBtnAction" prefWidth="60.0" text="Delete" />
+    <Button fx:id="saveBtn" layoutX="459.0" layoutY="338.0" mnemonicParsing="false" onAction="#saveBtnAction" prefWidth="60.0" text="Save" />
+    <Button fx:id="cancelBtn" layoutX="525.0" layoutY="338.0" mnemonicParsing="false" onAction="#cancelBtnAction" prefWidth="60.0" text="Cancel" />
     <GridPane layoutX="14.0" layoutY="51.0" prefHeight="300.0" prefWidth="258.0" style="-fx-background-color: #EEEEEE;">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="70.0" />
