--- a/src/View_Controller/MainScreen.fxml
+++ b/src/View_Controller/MainScreen.fxml
@@ -4,123 +4,144 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane fx:id="MainScene" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.MainScreenController">
-    <Label layoutX="14.0" layoutY="24.0" text="Inventory Management System">
-        <font>
-          <Font name="System Bold" size="24.0" />
-        </font>
-    </Label>
-    <GridPane layoutX="14.0" layoutY="71.0" prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: #E0E0E0;">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.MainScreenController">
+    <GridPane layoutX="14.0" layoutY="24.0" prefHeight="380.0" prefWidth="760.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="0.0" prefWidth="103.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="79.0" minHeight="0.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="219.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
         </rowConstraints>
-        <Label text="Parts">
+        <Label text="Inventory Management System">
             <font>
-                <Font name="System Bold" size="18.0" />
+              <Font name="System Bold" size="24.0" />
             </font>
-            <GridPane.margin>
-                <Insets left="10.0" />
-            </GridPane.margin>
         </Label>
-        <Button fx:id="searchPartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
-            <GridPane.margin>
-                <Insets />
-            </GridPane.margin>
+        <GridPane prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: #E0E0E0;" GridPane.rowIndex="1">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="0.0" prefWidth="103.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="79.0" minHeight="0.0" prefHeight="31.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="219.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <Label text="Parts">
+                <font>
+                    <Font name="System Bold" size="18.0" />
+                </font>
+                <GridPane.margin>
+                    <Insets left="10.0" />
+                </GridPane.margin>
+            </Label>
+            <Button fx:id="searchPartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                <GridPane.margin>
+                    <Insets />
+                </GridPane.margin>
+            </Button>
+            <TextField fx:id="partSearchBox" promptText="Part Name" GridPane.columnIndex="2">
+                <GridPane.margin>
+                    <Insets left="5.0" right="10.0" />
+                </GridPane.margin>
+                <font>
+                    <Font name="System Italic" size="12.0" />
+                </font>
+            </TextField>
+            <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                <Button fx:id="addPartBtn" mnemonicParsing="false" onAction="#addPartBtnAction" text="Add" textAlignment="CENTER">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="updatePartBtn" mnemonicParsing="false" onAction="#updatePartBtnAction" text="Update" textAlignment="CENTER">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="deletePartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Delete" textAlignment="CENTER">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+            </HBox>
+            <TableView fx:id="partsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+                <columns>
+                    <TableColumn fx:id="partIDCol" prefWidth="50.0" text="ID" />
+                    <TableColumn fx:id="partNameCol" prefWidth="160.0" text="Name" />
+                    <TableColumn fx:id="partLevelCol" prefWidth="89.0" text="Level" />
+                    <TableColumn fx:id="partPriceCol" text="Cost" />
+                </columns>
+            </TableView>
+          <padding>
+              <Insets right="5.0" />
+          </padding>
+        </GridPane>
+        <GridPane prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: #E0E0E0;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="103.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints maxHeight="89.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="222.0" minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <Label text="Products">
+                <font>
+                    <Font name="System Bold" size="18.0" />
+                </font>
+                <GridPane.margin>
+                    <Insets left="10.0" />
+                </GridPane.margin>
+            </Label>
+            <Button fx:id="searchProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+            <TextField fx:id="productSearchBox" promptText="Product Name" GridPane.columnIndex="2">
+                <GridPane.margin>
+                    <Insets left="5.0" right="10.0" />
+                </GridPane.margin>
+                <font>
+                    <Font name="System Italic" size="12.0" />
+                </font>
+            </TextField>
+            <TableView fx:id="productsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
+                <columns>
+                    <TableColumn fx:id="productIDCol" prefWidth="50.0" text="ID" />
+                    <TableColumn fx:id="productNameCol" prefWidth="168.0" text="Name" />
+                    <TableColumn fx:id="productLevelCol" prefWidth="81.0" text="Level" />
+                    <TableColumn fx:id="productPriceCol" text="Cost" />
+                </columns>
+            </TableView>
+            <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                <Button fx:id="addProductBtn" mnemonicParsing="false" onAction="#addProductBtnAction" text="Add">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="updateProductBtn" mnemonicParsing="false" onAction="#updateProductBtnAction" text="Update">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="deleteProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Delete">
+                    <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                    </HBox.margin>
+                </Button>
+            </HBox>
+          <padding>
+              <Insets left="5.0" />
+          </padding>
+        </GridPane>
+        <Button alignment="CENTER" mnemonicParsing="false" onAction="#exitBtnAction" prefWidth="80.0" text="Exit" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+           <GridPane.margin>
+               <Insets top="10.0" />
+           </GridPane.margin>
         </Button>
-        <TextField fx:id="partSearchBox" promptText="Part Name" GridPane.columnIndex="2">
-            <GridPane.margin>
-                <Insets left="5.0" right="10.0" />
-            </GridPane.margin>
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-        </TextField>
-        <HBox alignment="CENTER" prefHeight="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-            <Button fx:id="addPartBtn" mnemonicParsing="false" onAction="#addPartBtnAction" text="Add" textAlignment="CENTER">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-            <Button fx:id="updatePartBtn" mnemonicParsing="false" onAction="#updatePartBtnAction" text="Update" textAlignment="CENTER">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-            <Button fx:id="deletePartBtn" mnemonicParsing="false" onAction="#deletePartBtnAction" text="Delete" textAlignment="CENTER">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-        </HBox>
-        <TableView fx:id="partsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
-            <columns>
-                <TableColumn prefWidth="50.0" text="ID" />
-                <TableColumn prefWidth="160.0" text="Name" />
-                <TableColumn prefWidth="89.0" text="Level" />
-                <TableColumn text="Cost" />
-            </columns>
-        </TableView>
     </GridPane>
-    <GridPane layoutX="408.0" layoutY="71.0" prefHeight="300.0" prefWidth="380.0" style="-fx-background-color: #E0E0E0;">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="82.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="103.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="165.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints maxHeight="89.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="222.0" minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-        <Label text="Products">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-            <GridPane.margin>
-                <Insets left="10.0" />
-            </GridPane.margin>
-        </Label>
-        <Button fx:id="searchProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Search" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-        <TextField fx:id="productSearchBox" promptText="Product Name" GridPane.columnIndex="2">
-            <GridPane.margin>
-                <Insets left="5.0" right="10.0" />
-            </GridPane.margin>
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-        </TextField>
-        <TableView fx:id="productsTable" prefHeight="222.0" prefWidth="370.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
-            <columns>
-                <TableColumn prefWidth="50.0" text="ID" />
-                <TableColumn prefWidth="168.0" text="Name" />
-                <TableColumn prefWidth="81.0" text="Level" />
-                <TableColumn text="Cost" />
-            </columns>
-        </TableView>
-        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-            <Button fx:id="addProductBtn" mnemonicParsing="false" onAction="#addProductBtnAction" text="Add">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-            <Button fx:id="updateProductBtn" mnemonicParsing="false" onAction="#updateProductBtnAction" text="Update">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-            <Button fx:id="deleteProductBtn" mnemonicParsing="false" onAction="#deleteProductBtnAction" text="Delete">
-                <HBox.margin>
-                    <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                </HBox.margin>
-            </Button>
-        </HBox>
-    </GridPane>
-   <Button alignment="CENTER" layoutX="700.0" layoutY="385.0" mnemonicParsing="false" onAction="#exitBtnAction" prefWidth="80.0" text="Exit" />
 </AnchorPane>
