--- a/src/View_Controller/UpdateProduct.fxml
+++ b/src/View_Controller/UpdateProduct.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane fx:id="UpdateProductScene" prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.UpdateProductController">
+<AnchorPane prefHeight="380.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View_Controller.UpdateProductController">
     <Label layoutX="14.0" layoutY="14.0" text="Update Product">
         <font>
             <Font name="System Bold" size="18.0" />
